--- a/demos/basic.html
+++ b/demos/basic.html
@@ -1,6 +1,6 @@
 <html lang="de">
 <head>
-    <title>Basic Demo - Adventure Accordion</title>
+    <title>Accordion Demo</title>
     <link rel="stylesheet" href="build/demo.css">
     <meta charset="utf-8">
 </head>
