--- a/demos/event-binding.html
+++ b/demos/event-binding.html
@@ -1,6 +1,6 @@
 <html lang="de">
 <head>
-    <title>Event Binding Demo - Adventure Accordion</title>
+    <title>Accordion Event Binding Demo</title>
     <link rel="stylesheet" href="build/demo.css">
     <meta charset="utf-8">
 </head>
