--- a/demos/faq.html
+++ b/demos/faq.html
@@ -1,6 +1,6 @@
 <html lang="de">
 <head>
-    <title>FAQ Demo - Adventure Accordion</title>
+    <title>FAQ Accordion Demo</title>
     <link rel="stylesheet" href="build/demo.css">
     <meta charset="utf-8">
 </head>
